--- a/app/src/main/res/layout/routine_list_item.xml
+++ b/app/src/main/res/layout/routine_list_item.xml
@@ -1,102 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card"
+<LinearLayout android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:layout_marginTop="12dp"
-    android:padding="8dp"
-    app:cardElevation="10dp"
-    app:cardCornerRadius="10dp">
-
-    <LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_margin="8dp"
+        android:layout_marginTop="12dp"
+        android:padding="8dp"
+        app:cardElevation="10dp"
+        app:cardCornerRadius="10dp">
 
-        <!-- Media -->
-
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <!-- Title, secondary and supporting text -->
-
-            <ImageView
-                android:id="@+id/routineImg"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/r1"
-                android:layout_width="160dp"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/register"
-                android:scaleType="centerCrop" />
-
-            <TextView
-                android:id="@+id/routineName"
-                app:layout_constraintBottom_toTopOf="@+id/routineScore"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="2dp"
-                android:text="Routine"
-                android:textAppearance="?attr/textAppearanceHeadline6" />
-
-            <TextView
-                android:id="@+id/routineScore"
-                app:layout_constraintStart_toStartOf="@+id/routineName"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="44dp"
-                android:padding="2dp"
-                android:text="Score: 1 out of 5"
-                android:textAppearance="?attr/textAppearanceBody2"
-                android:textColor="?android:attr/textColorSecondary" />
-
-            <TextView
-                android:id="@+id/routineUser"
-                app:layout_constraintStart_toStartOf="@+id/routineScore"
-                app:layout_constraintTop_toBottomOf="@+id/routineScore"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:padding="2dp"
-                android:text="Made by: Dagos"
-                android:textAppearance="?attr/textAppearanceBody2"
-                android:textColor="?android:attr/textColorSecondary" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <!-- Buttons -->
         <LinearLayout
-
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-            android:orientation="horizontal">
+            <!-- Media -->
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/materialButton"
-                style="?attr/borderlessButtonStyle"
-                app:icon="@drawable/ic_favs"
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="140dp"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <!-- Title, secondary and supporting text -->
+
+                <ImageView
+                    android:id="@+id/routineImg"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:srcCompat="@drawable/r1"
+                    android:layout_width="160dp"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/register"
+                    android:scaleType="centerCrop" />
+
+                <TextView
+                    android:id="@+id/routineName"
+                    app:layout_constraintBottom_toTopOf="@+id/routineScore"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="2dp"
+                    android:text="Routine"
+                    android:textAppearance="?attr/textAppearanceHeadline6" />
+
+                <TextView
+                    android:id="@+id/routineScore"
+                    app:layout_constraintStart_toStartOf="@+id/routineName"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="44dp"
+                    android:padding="2dp"
+                    android:text="Score: 1 out of 5"
+                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textColor="?android:attr/textColorSecondary" />
+
+                <TextView
+                    android:id="@+id/routineUser"
+                    app:layout_constraintStart_toStartOf="@+id/routineScore"
+                    app:layout_constraintTop_toBottomOf="@+id/routineScore"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:padding="2dp"
+                    android:text="Made by: Dagos"
+                    android:textAppearance="?attr/textAppearanceBody2"
+                    android:textColor="?android:attr/textColorSecondary" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <!-- Buttons -->
+            <LinearLayout
+
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
 
-            <com.google.android.material.button.MaterialButton
-                style="?attr/borderlessButtonStyle"
-                app:icon="@drawable/ic_share"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_width="wrap_content"
+                android:orientation="horizontal">
 
-                android:layout_height="wrap_content" />
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/materialButton"
+                    style="?attr/borderlessButtonStyle"
+                    app:icon="@drawable/ic_favs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <com.google.android.material.button.MaterialButton
+                    style="?attr/borderlessButtonStyle"
+                    app:icon="@drawable/ic_share"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_width="wrap_content"
+
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+
         </LinearLayout>
-
-
-    </LinearLayout>
-</com.google.android.material.card.MaterialCardView>
+    </com.google.android.material.card.MaterialCardView>
+</LinearLayout>
