--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,6 +7,17 @@
     android:orientation="vertical"
     tools:context=".home">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Mis rutinas"
+        android:textStyle="bold"
+        android:textSize="@dimen/headerTextSize"
+        android:padding="40px"
+        >
+
+    </TextView>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,7 +25,8 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
+
+    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
 <!--        android:id="@+id/bottom_navigation"-->
 <!--        android:layout_width="match_parent"-->
 <!--        android:layout_height="wrap_content"-->
