--- a/app/src/main/res/layout/routine_list_item.xml
+++ b/app/src/main/res/layout/routine_list_item.xml
@@ -77,28 +77,28 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <!-- Buttons -->
-            <LinearLayout
+<!--            <LinearLayout-->
 
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
 
-                android:orientation="horizontal">
+<!--                android:orientation="horizontal">-->
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/materialButton"
-                    style="?attr/borderlessButtonStyle"
-                    app:icon="@drawable/ic_favs"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+<!--                <com.google.android.material.button.MaterialButton-->
+<!--                    android:id="@+id/materialButton"-->
+<!--                    style="?attr/borderlessButtonStyle"-->
+<!--                    app:icon="@drawable/ic_favs"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content" />-->
 
-                <com.google.android.material.button.MaterialButton
-                    style="?attr/borderlessButtonStyle"
-                    app:icon="@drawable/ic_share"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_width="wrap_content"
+<!--                <com.google.android.material.button.MaterialButton-->
+<!--                    style="?attr/borderlessButtonStyle"-->
+<!--                    app:icon="@drawable/ic_share"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"-->
+<!--                    android:layout_width="wrap_content"-->
 
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
+<!--                    android:layout_height="wrap_content" />-->
+<!--            </LinearLayout>-->
 
 
         </LinearLayout>
