--- a/app/src/main/res/layout/routine_list_item.xml
+++ b/app/src/main/res/layout/routine_list_item.xml
@@ -10,13 +10,16 @@
         android:layout_margin="8dp"
         android:layout_marginTop="12dp"
         android:padding="8dp"
+        app:cardBackgroundColor="@color/purple_200"
         app:cardElevation="10dp"
+
         app:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
 
             <!-- Media -->
 
