--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -16,6 +16,10 @@
             android:id="@+id/nav_myexercises"
             android:icon="@drawable/ic_dumbbell"
             android:title="@string/section_myexercises" />
+        <item
+            android:id="@+id/nav_favourites"
+            android:icon="@drawable/ic_favs"
+            android:title="@string/section_favourites" />
     </group>
 </menu>
 <!--<?xml version="1.0" encoding="utf-8"?>-->
