Auto stash before merge of "main" and "origin/main"

--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -6,41 +6,18 @@
     tools:context=".ui.favourites.FavouritesFragment"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:text="@string/section_myroutines"
-        android:textStyle="bold"
-        android:textSize="@dimen/headerTextSize"
-        android:padding="40px"
-        >
-
-    </TextView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/destacadasRecView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/section_myexercises"
-        android:textStyle="bold"
-        android:textSize="@dimen/headerTextSize"
-        android:padding="40px"
+        android:layout_gravity="center_horizontal"
+
         >
 
-    </TextView>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/destacadasRecView2">
-
     </androidx.recyclerview.widget.RecyclerView>
+
+
+
 
 </LinearLayout>
