--- a/app/src/main/res/layout/exercise_list_item.xml
+++ b/app/src/main/res/layout/exercise_list_item.xml
@@ -1,29 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
 
     >
 
-    <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_margin="8dp"
         android:layout_marginTop="12dp"
         android:padding="8dp"
+        android:gravity="center"
         app:cardBackgroundColor="@color/teal_200"
         app:cardElevation="10dp"
         app:cardCornerRadius="15dp"
         >
 
         <LinearLayout android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:orientation="vertical"
             >
-            <TextView android:layout_height="wrap_content"
-                 android:layout_width="wrap_content"
-                android:padding="12dp"
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:id="@+id/name"
+                android:paddingTop="12dp"
+                android:paddingBottom="6dp"
                 android:text="Exercise"
                 android:textAppearance="?attr/textAppearanceHeadline6"
                 >
@@ -31,17 +38,21 @@
             </TextView>
             <TextView android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:paddingLeft="12dp"
+
                 android:text="Type"
-                android:textAppearance="?attr/textAppearanceSubtitle1"
+                android:layout_gravity="center"
+                android:textAppearance="?attr/textAppearanceSubtitle2"
+                android:id="@+id/type"
                 >
 
             </TextView>
             <TextView android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
-                android:paddingLeft="12dp"
+
                 android:text="Detail"
+                android:layout_gravity="center"
                 android:textAppearance="?attr/textAppearanceCaption"
+                android:id="@+id/detail"
                 >
 
             </TextView>
