--- a/app/src/main/res/layout/routine_list_item.xml
+++ b/app/src/main/res/layout/routine_list_item.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout android:layout_height="wrap_content"
-    android:layout_width="match_parent"
+    android:layout_width="300dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,8 +12,9 @@
         android:padding="8dp"
         app:cardBackgroundColor="@color/purple_200"
         app:cardElevation="10dp"
-
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="10dp"
+        android:onClick="goToRoutineActivity"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
