--- a/app/src/main/res/layout/fragment_my_routines.xml
+++ b/app/src/main/res/layout/fragment_my_routines.xml
@@ -8,6 +8,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:paddingTop="30dp"
         android:id="@+id/destacadasRecView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
